--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/about-me-app",
+            "baseHref": "/Angular-Day-One--Project-About-me/",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
